--- a/makefiles/Makefile.gfortran-openmp
+++ b/makefiles/Makefile.gfortran-openmp
@@ -1,5 +1,6 @@
 FC = gfortran
 FCSYNTAXONLY = -fsyntax-only
 FCFLAGS = -fimplicit-none -fdefault-real-8 -fdefault-double-8 -Wall -Wextra -Wconversion -Wrealloc-lhs-all -finit-real=snan -finit-integer=-999 -finit-character=63 -O3  -march=native -ffast-math -fno-protect-parens -fstack-arrays -fwhole-program -flto -fopenmp
+LDFLAGS = -llapack -lblas
 
 include ../../makefiles/common.mk
